feat: Add Object attr highlight
task: #ad3e6

--- a/src/styles/core/_variables.scss
+++ b/src/styles/core/_variables.scss
@@ -33,6 +33,8 @@ $masks: map-merge(
     (
         mask-1: #e06c75,
         mask-2: #61aeee,
+        mask-3: #4690ec,
+        mask-4: #d19a66,
     ),
     $masks
 );
