feat: add new themes
- material-dark
- material-light
- neutral-dark
- neutral-light

core theme rename to default

task: #eww77

--- a/src/styles/core/_container.scss
+++ b/src/styles/core/_container.scss
@@ -1,7 +1,7 @@
 .#{$prefix}container {
     display: block;
-    background: $container-bg;
+    background-color: $background-color;
     padding: .5em;
-    color: $container-color;
+    color: $color;
     overflow-x: auto;
 }
