feat: extended list of tokens, started adding style impurities
task: #gr20j

--- a/src/styles/core/_syntax.scss
+++ b/src/styles/core/_syntax.scss
@@ -4,6 +4,14 @@
     }
 }
 
-.#{$prefix}comment {
-    font-style: italic;
+.#{$prefix}emphasis {
+  font-style: italic;
+}
+
+.#{$prefix}strong {
+  font-weight: bold;
+}
+
+.#{$prefix}link {
+  text-decoration: underline;
 }
