--- a/src/styles/themes/material-light.scss
+++ b/src/styles/themes/material-light.scss
@@ -2,15 +2,20 @@ $color: #607d8b;
 $background-color: #fafafa;
 
 $masks: (
-    variable: #80cbc4,
     comment: #ccd7da,
-    keyword: #7c4dff,
-    entity: #6182b8,
-    string: #91b859,
     template: #91b859,
+    string: #91b859,
     constant: #91b859,
-    meta: #607d8b,
+    storage: #7c4dff,
+    attribute: #7c4dff,
     operator: #7c4dff,
+    variable: #80cbc4,
+    interpolation: #80cbc4,
+    keyword: #7c4dff,
+    symbol: #91b859,
+    entity: #6182b8,
+    meta: #607d8b,
+    source: $color,
 );
 
 @import '../core/core';
