feat: added mask modifiers
task: #hcb5h, #gr20j

--- a/src/styles/themes/atom-one-dark.scss
+++ b/src/styles/themes/atom-one-dark.scss
@@ -12,7 +12,7 @@ $masks: (
     variable: #e06c75,
     interpolation: #be5046,
     keyword: #c678dd,
-    symbol: #56b6c2,
+    symbol: #c678dd,
     entity: #61afef,
     meta: #e5c07b,
     source: $color,
